# spirvcrossj

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.sh  fix-bitset-constructor.patch  fix-small-vector.patch  fix-tokenizer.patch  libspirvcrossj.i  pom.xml  post-build.sh  settings.xml  spirv_common_hpp_deprecated.patch
deploy/: before-deploy.sh  codesigning-appveyor.asc.enc  codesigning.asc.enc  deploy.sh  install-gnupg.ps1
java-wrapper/: pom.xml
java-wrapper/src/main/java/graphics/scenery/spirvcrossj/: Loader.java
java-wrapper/src/main/java/is/ulrik/spirvcrossj/: Loader.java
java-wrapper/src/test/java/graphics/scenery/spirvcrossj/: TestGLSLToVulkan.java  TestVulkanToGLSL.java
java-wrapper/src/test/java/is/ulrik/spirvcrossj/: TestVulkanToGLSL.java
java-wrapper/src/test/java/spirvcrossj/: TestGLSLtoVulkan.java
src/main/java/graphics/scenery/spirvcrossj/: Loader.java
src/test/java/graphics/scenery/spirvcrossj/: TestGLSLToVulkan.java  TestVulkanToGLSL.java
src/test/resources/graphics/scenery/spirvcrossj/: HBAOBlur.frag.spv  spvFileList.txt
